[project]
name = "stable-diffusion-sample"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "KoheiOkamoto", email = "ohayousagi.ac.kook0727@gmail.com"},
]
dependencies = [
    "diffusers>=0.30.3",
    "transformers>=4.45.2",
    "accelerate>=1.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
